Thu Aug 17 00:12:36 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Wheeeee! Geist can load it's own file format now :-)
	* Just make some changes, do a file/save and then load it
	back. Yipee!

Wed Aug 16 20:30:52 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Update object list when changing current document.
	* Freeze clist for multiple additions...

Wed Aug 16 20:13:26 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Support multiple documents. Added "Save" menu item...

Tue Aug 15 18:38:17 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Start of some menus and a working "Save as..." entry. This is
	not how the menus will end up, but serves as a working test...

Sun Aug 13 17:41:08 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Saving to XML format. XML is a nice structured format for our
	needs. Run geist and check the contents of test.xml after it's
	opened up...
	* Yes. You will need libxml installed for geist to compile now...

Sat Aug 12 21:38:21 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Start of abstracted "fill" type.

Wed Aug  9 19:31:43 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Object properties are now called by the objects themselves. The
	add text button has been changed to use this code, and there is a
	new "Edit" button to bring up properties.

Wed Aug  9 00:18:47 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Changed api to use obj->layer and layer->doc, cleaned it up a
	lot in the process.

Tue Aug  8 23:19:35 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Patch from Tillsan for "add rectangle" and the start of some
	object property code.

Tue Aug  8 18:51:07 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Seperated resize modes from alignment modes. API cleanup.

Mon Aug  7 21:34:38 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Rectangle resizing
	* Centred text resizing
	* Centred image resizing, need to implement zoom and scale resize
	modes for this next.
